--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cdfab">CDFAB</string>
     <string name="filmPopulaire">Films Populaires</string>
+    <string name="addFavoris">Ajouté aux favoris !</string>
 </resources>
