Ajout recherche + attention redirection ne marche pas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="cdfab">CDFAB</string>
     <string name="filmPopulaire">Films Populaires</string>
     <string name="addFavoris">Ajouté aux favoris !</string>
-    <string name="recherche">Rechercher</string>
+    <string name="recherche">Recherche</string>
 </resources>
